# try_catch

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
cmake/: tc_try_catchConfig.cmake.in
examples/: main.cpp
include/tc/: try_catch.hpp
tests/: test_catch_do_as.cpp  test_catch_order_rethrow.cpp  test_helpers_abort.cpp  test_logging.cpp  test_noexcept.cpp  test_throw_guard.cpp  test_try_catch.cpp
